# imgcat2

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md
src/imgcat2/: main.c
src/imgcat2/ansi/: ansi.c  ansi.h  escape.c  escape.h
src/imgcat2/core/: cli.c  cli.h  image.c  image.h  main.c  metadata.c  metadata.h  pipeline.c  pipeline.h
src/imgcat2/decoders/: decoder.c  decoder.h  decoder_avif.c  decoder_gif.c  decoder_heif.c  decoder_ico.c  decoder_jpeg.c  decoder_jxl.c  decoder_nanosvg.c  decoder_png.c  decoder_qoi.c  decoder_raw.c  decoder_resvg.c  decoder_stb.c  decoder_svg.c  decoder_tiff.c  decoder_webp.c  magic.c  magic.h
src/imgcat2/ghostty/: ghostty.c  ghostty.h
src/imgcat2/iterm2/: base64.c  base64.h  iterm2.c  iterm2.h
src/imgcat2/kitty/: kitty.c  kitty.h
src/imgcat2/terminal/: iterm2.c  iterm2.h  kitty.c  kitty.h  terminal.h  terminal_unix.c  terminal_windows.c
src/tests/: CMakeLists.txt  ctest.h  decoder_internal.h
src/tests/integration/: main.c  test_animation.c  test_cli_arguments.c  test_cross_platform.c  test_pipeline_end_to_end.c  test_stdin_pipe.c
src/tests/unit/: main.c  test_ansi.c  test_cli_parsing.c  test_decoder_jpeg.c  test_decoder_png.c  test_decoder_stb.c  test_image_create_destroy.c  test_image_processing.c  test_magic.c  test_security.c  test_terminal.c
